neural_coder_workspace/bench16618511645763395/performance.log
  File "/home2/longxin/Neural_Coder_EXT/tmp.py", line 3
    import
          ^
SyntaxError: invalid syntax
